Removed my_restaurant and fixed routes
